--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=course-service
 # = DATABASE CONFIGURATION =====
 # ===============================
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://vrk7xcrab1wsx4r1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pd0tr6v4018a7vlm?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://sh4ob67ph9l80v61.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uaqz7c47fzsi3jpf?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=ee1r0f9bgujh83n6
-spring.datasource.password=ab98sd6aby7ppp1s
+spring.datasource.username=dl0wjrzhavtru2hv
+spring.datasource.password=wvdkklcff3eskzgq
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
